# IRIS-backend

./: .gitignore  PROJECT_GUIDE.html  PROJECT_GUIDE.md  README.md  SESSION_SUMMARY.md  main.py  requirements.txt  requirements.windows.txt
actions/: action_router.py  clipboard_actions.py  email_actions.py  file_actions.py  os_actions.py  safety.py  screen_actions.py  shell_actions.py  timer_actions.py  todo_actions.py  weather_actions.py
agents/: agent_manager.py  base_agent.py  coding_agent.py  executor.py  planner.py
audio/: asr.py  faster_whisper_backend.py  groq_whisper_backend.py  interrupt_handler.py  listener.py  wake_word.py
backend/: Dockerfile  README.md  proxy_server.py  railway.json
browser/: browser_agent.py  login_handler.py  scraper.py
configs/: keys.env.example  settings.yaml
core/: daemon.py  event_loop.py  state_manager.py  task_orchestrator.py
data/: long_term_memory.json
docs/: AUDIT_REPORT.md  EMAIL_IMPLEMENTATION_SUMMARY.md  EMAIL_QUICK_START.txt  EMAIL_SETUP.md  FEATURES_SUMMARY.md  PROJECT_GUIDE.md  TIMER_SETUP.md  TODO_SETUP.md  WEATHER_SETUP.md  WINDOWS_TESTING.md  architecture.md  generate_project_guide.py
llm/: prompt_manager.py  router.py
memory/: graph.py  long_term.py  memory_manager.py  self_improvement.py  short_term.py  vector_store.py
tests/: test_agents.py  test_audio.py  test_browser.py  test_email.py  test_event_loop.py  test_groq_whisper_backend.py  test_llm_router.py  test_memory.py  test_security.py  (+4 more)
ui/tauri-app/src-tauri/: Cargo.toml  main.rs  tauri.conf.json
ui/tauri-app/src-tauri/src/: lib.rs  main.rs
(+26 files in other folders)
