[package]
name = "iris-overlay"
version = "0.1.0"
edition = "2021"

[lib]
name = "iris_overlay_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "iris-overlay"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"  # Optimize for binary size
strip = true
